// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Small API 1`] = `
.c0 {
  font-size: 0.923rem;
}

<Small>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-ifAKCX",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  font-size: ",
            [Function],
            ";
",
          ],
        },
        "displayName": "Small",
        "render": [Function],
        "styledComponentId": "sc-ifAKCX",
        "target": "small",
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <small
      className="c0"
    >
      Small content
    </small>
  </StyledComponent>
</Small>
`;

exports[`Storyshots Small With color 1`] = `
.c0 {
  margin: 0;
  font-size: 1rem;
  color: #00A1DE;
}

.c1 {
  font-size: 0.923rem;
}

<P
  color="primary"
>
  <StyledComponent
    color="primary"
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  margin: 0;
  font-size: ",
            [Function],
            ";

  ",
            [Function],
            ";
",
          ],
        },
        "displayName": "P",
        "propTypes": Object {
          "color": [Function],
        },
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      }
    }
    forwardedRef={null}
  >
    <BaseComponent
      className="c0"
      color="primary"
    >
      <div
        className="c0"
        color="primary"
      >
        Nisi eu eiusmod cupidatat aute laboris commodo excepteur
        <Small>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "sc-ifAKCX",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  font-size: ",
                    [Function],
                    ";
",
                  ],
                },
                "displayName": "Small",
                "render": [Function],
                "styledComponentId": "sc-ifAKCX",
                "target": "small",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <small
              className="c1"
            >
               Small content 
            </small>
          </StyledComponent>
        </Small>
        incididunt incididunt aliquip pariatur est minim officia sit.
      </div>
    </BaseComponent>
  </StyledComponent>
</P>
`;

exports[`Storyshots Small Within <P> 1`] = `
.c0 {
  margin: 0;
  font-size: 1rem;
}

.c1 {
  font-size: 0.923rem;
}

<P>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-bxivhb",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  margin: 0;
  font-size: ",
            [Function],
            ";

  ",
            [Function],
            ";
",
          ],
        },
        "displayName": "P",
        "propTypes": Object {
          "color": [Function],
        },
        "render": [Function],
        "styledComponentId": "sc-bxivhb",
        "target": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      }
    }
    forwardedRef={null}
  >
    <BaseComponent
      className="c0"
    >
      <div
        className="c0"
      >
        Nisi eu eiusmod cupidatat aute laboris commodo excepteur
        <Small>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": undefined,
                "componentStyle": ComponentStyle {
                  "componentId": "sc-ifAKCX",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
  font-size: ",
                    [Function],
                    ";
",
                  ],
                },
                "displayName": "Small",
                "render": [Function],
                "styledComponentId": "sc-ifAKCX",
                "target": "small",
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <small
              className="c1"
            >
               Small content 
            </small>
          </StyledComponent>
        </Small>
        incididunt incididunt aliquip pariatur est minim officia sit.
      </div>
    </BaseComponent>
  </StyledComponent>
</P>
`;
